--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -20,6 +20,11 @@
 
     </head>
     <body>
+    <?php
+        echo "<pre>";
+        print_r($_SERVER);
+        echo "</pre>";
+    ?>
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
